--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "history": "^4.10.1",
     "polished": "^3.6.4",
     "react": "^16.13.1",
+    "react-datepicker": "^2.16.0",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
     "react-redux": "^7.2.0",
