--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,6 @@
 {
     "dependencies": {
+        "axios": "^0.19.2",
         "bcrypt": "^4.0.1",
         "brcypt": "^1.0.1",
         "cors": "^2.8.5",
