--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
         "express": "^4.17.1",
         "jsonwebtoken": "^8.5.1",
         "knex": "^0.21.1",
+        "morgan": "^1.10.0",
         "pg": "^8.2.1",
         "yup": "^0.29.1"
     },
