--- a/backend/package.json
+++ b/backend/package.json
@@ -4,10 +4,12 @@
         "bcrypt": "^4.0.1",
         "brcypt": "^1.0.1",
         "cors": "^2.8.5",
+        "crypto": "^1.0.1",
         "express": "^4.17.1",
         "jsonwebtoken": "^8.5.1",
         "knex": "^0.21.1",
         "morgan": "^1.10.0",
+        "multer": "^1.4.2",
         "pg": "^8.2.1",
         "yup": "^0.29.1"
     },
