--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
         "morgan": "^1.10.0",
         "multer": "^1.4.2",
         "pg": "^8.2.1",
+        "stripe": "^8.63.0",
         "yup": "^0.29.1"
     },
     "scripts": {
